<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">3D Camera</string>
    <string name="left_pic">Left Photo</string>
    <string name="right_pic">Right Photo</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="back_button">Back</string>
    <string name="save">Save!</string>
    <string name="restart">Restart</string>
    <string name="flash">flash</string>
    <string name="square">square</string>
    <string name="left_toast">Left Photo Captured</string>
    <string name="right_toast">Combining!</string>
    <string name="focal_point">Choose Focal Point</string>
    <string name="alignment_failed_message">Alignment Failed</string>
    <string name="manual_align_message">Manually align?</string>
    <string name="manual_align_yes">Align</string>
    <string name="manual_align_no">Cancel</string>

    <string name="info_message">
        <![CDATA[

            Take right photo 6cm to the right of the left photo, keeping your object central.


        ]]>
    </string>

    <string name="vertical_align_message">
        <![CDATA[

            VERTICAL ALIGN\n
            - Vertically align the images

        ]]>
    </string>

    <string name="touch_align_message">
        <![CDATA[

            TOUCH ALIGN\n
            - Align images at a point

        ]]>
    </string>

    <string name="manual_align_message_2">
        <![CDATA[

            MANUAL ALIGN\n
            - Manually align the images

        ]]>
    </string>

    <string name="info_message_2">
        <![CDATA[

            Align the images at the point you want in focus, using the buttons above

        ]]>
    </string>


</resources>


